--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
 
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
+    compile 'com.github.abumoallim:Android-Multi-Select-Dialog:v1.6'
 
 }
