--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
@@ -48,7 +48,7 @@
             android:name=".ProfileInfo"
             android:label="@string/title_activity_profile_info"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".DiscountDetails"
             android:label="@string/title_activity_discount_details"
@@ -64,7 +64,12 @@
         <activity
             android:name=".JobDetails"
             android:label="@string/title_activity_job_details"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MultiSpinner_Vendor_Category"
+            android:label="@string/title_activity_multi_spinner__vendor__category"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
