--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
 
     compile 'com.wdullaer:materialdatetimepicker:3.5.0'
     compile 'com.github.abumoallim:Android-Multi-Select-Dialog:v1.6'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
