--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.whiteelephant:monthandyearpicker:1.2.0'
     compile 'com.github.twinkle942910:monthyearpicker:0.0.1'
+    compile 'com.github.drawers:SpinnerDatePicker:1.0.6'
 }
