--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".AppController"
+        android:name=".JavaClasses.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -110,6 +110,10 @@
         <activity
             android:name=".Settings_ProfileActivity_Vendor"
             android:label="@string/title_activity_settings__profile__vendor"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Discount_Edit_Vendor"
+            android:label="@string/title_activity_discount__edit__vendor"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
