New Changes before sending

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.github.twinkle942910:monthyearpicker:0.0.1'
     compile 'com.github.drawers:SpinnerDatePicker:1.0.6'
     compile 'com.thefinestartist:finestwebview:1.2.7'
+    compile 'com.wang.avi:library:2.1.3'
 }
