New Changes before sending

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait"
 
             android:theme="@style/AppTheme.NoActionBar" />
@@ -37,14 +37,16 @@
             android:name=".SignupActivity"
 
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_signup"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomeScreen"
             android:label="@string/title_activity_home_screen"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
 
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar">
 
             <!-- <intent-filter> -->
@@ -65,25 +67,25 @@
             android:name=".DiscountDetails_User"
             android:label="@string/title_activity_discount_details"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Settings_ProfileActivity_User"
             android:label="@string/title_activity_settings__profile"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Settings_AccountActivity"
             android:label="@string/title_activity_settings__account"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".JobDetails_User"
             android:label="@string/title_activity_job_details"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MultiSpinner_Vendor_Category"
@@ -96,21 +98,23 @@
             android:name=".HomeScreen_vendor"
             android:label="@string/title_activity_home_screen_vendor"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddDiscount_Vendor"
             android:label="@string/title_activity_add_discount__vendor"
             android:screenOrientation="portrait"
-
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".DiscountDetails_Vendor"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_discount_details__vendor"
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddJobs_Vendor"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_add_jobs__vendor"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -140,17 +144,23 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Discount_Edit_Vendor"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_discount__edit__vendor"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Job_Edit_Vendor"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_job__edit__vendor"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddEvents_Vendor"
-
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_add_events__vendor"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
