--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.github.drawers:SpinnerDatePicker:1.0.6'
     compile 'com.thefinestartist:finestwebview:1.2.7'
     compile 'com.wang.avi:library:2.1.3'
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
 }
