--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.quaticstech.weqar"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -48,5 +48,6 @@ dependencies {
     compile 'com.github.drawers:SpinnerDatePicker:1.0.6'
     compile 'com.thefinestartist:finestwebview:1.2.7'
     compile 'com.wang.avi:library:2.1.3'
-    compile 'com.github.yalantis:ucrop:2.2.1-native'
+    compile 'com.github.yalantis:ucrop:2.2.1'
+    compile 'com.github.clans:fab:1.6.4'
 }
